--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 Build
 RestKit.xcodeproj/xcuserdata
+contents.xcworkspacedata
+RestKit.xcodeproj/project.xcworkspace/xcuserdata/leonid.xcuserdatad/WorkspaceSettings.xcsettings
+RestKit.xcodeproj/project.xcworkspace/xcuserdata/leonid.xcuserdatad/UserInterfaceState.xcuserstate
+Specs
